Add RichEmbed funcionality to stream notifications and get data from IGDB database

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 BOT_TOKEN=<BOT_TOKEN_HERE>
 STRIIMI_KANAVA_ID=<CHANNEL_ID_HERE>
+CLIENT_ID=<TWITCH_APPLICATION_CLIENT_ID_HERE>
+ACCESS_TOKEN=<TWITCH_OAUTH_ACCESS_TOKEN_HERE>
