--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.26.0",
     "discord-api-types": "^0.27.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "redis": "^4.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
